--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,15 @@
 
 main {
   display: flex;
-  justify-content: center;
+  flex-flow: column wrap;
+  align-items: center;
   width: 100%;
 }
 
-h1, h2, h3 {
-  font-family: Raleway, sans-serif;
+section {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 p, a {
@@ -33,12 +36,29 @@ a {
   text-decoration: none;
 }
 
+h1, h2, h3 {
+  font-family: Raleway, sans-serif;
+}
+
+h2 {
+  font-size: 36px;
+}
+
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 1352px;
   height: 100%;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 70%;
 }
 
 .button {
@@ -62,7 +82,8 @@ a {
   box-shadow: 0 3px 6px var(--menu-shadow-color);
 }
 
-.header .container {
+.header .wrapper {
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -102,9 +123,7 @@ a {
 /* LANDING PAGE */
 
 .landing-page {
-  display: flex;
-  justify-content: center;
-  width: 100%;
+
   height: 100vh;
   background: url("../assets/background.png") no-repeat bottom/contain;
 }
@@ -128,4 +147,59 @@ a {
 
 .button__cta-button {
   padding: 22px 155px;
+}
+
+/* WHY-US PAGE */
+
+.why-us {
+  height: 70vh;
+}
+
+.why-us .wrapper {
+  padding-top: 5%;
+}
+
+.why-us__article {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  width: 25%;
+}
+
+.why-us__title {
+  margin: 20px auto;
+  font-size: 20px;
+  letter-spacing: 6px;
+  font-weight: 800;
+}
+
+.why-us__text {
+  text-align: center;
+  color: var(--info-text-color);
+}
+
+.why-us__img {
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 65px;
+  width: 65px;
+  border-radius: 50%;
+}
+
+.why-us__img img {
+  position: absolute;
+  left: 40%;
+}
+
+article:first-of-type .why-us__img {
+  background: var(--secondary-theme-color);
+}
+
+article:nth-of-type(2) .why-us__img{
+  background: var(--main-theme-color);
+}
+
+article:nth-of-type(3) .why-us__img{
+  background: var(--tertiary-theme-color);
 }
