--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
   --element-shadow-color: #07ACE629;
 }
 
+/* GENEREAL STYLES */
+
 * {
   box-sizing: border-box;
 }
@@ -40,13 +42,13 @@ h1, h2, h3 {
   font-family: Raleway, sans-serif;
 }
 
-h2 {
+.section-title {
   font-size: 36px;
 }
 
 .container {
   display: flex;
-  flex-direction: column;
+  flex-flow: column wrap;
   justify-content: center;
   align-items: center;
   width: 1352px;
@@ -58,7 +60,6 @@ h2 {
   justify-content: center;
   align-items: flex-start;
   width: 100%;
-  height: 70%;
 }
 
 .button {
@@ -120,7 +121,7 @@ h2 {
   border-bottom: 3px solid var(--main-theme-color);
 }
 
-/* LANDING PAGE */
+/* LANDING PAGE SECTION */
 
 .landing-page {
 
@@ -129,7 +130,7 @@ h2 {
 }
 
 .landing-page .container {
-  flex-flow: column wrap;
+  flex-wrap: wrap;
   height: 50%;
 }
 
@@ -149,7 +150,7 @@ h2 {
   padding: 22px 155px;
 }
 
-/* WHY-US PAGE */
+/* WHY-US SECTION*/
 
 .why-us {
   height: 70vh;
@@ -157,6 +158,7 @@ h2 {
 
 .why-us .wrapper {
   padding-top: 5%;
+  height: 70%;
 }
 
 .why-us__article {
@@ -192,14 +194,136 @@ h2 {
   left: 40%;
 }
 
-article:first-of-type .why-us__img {
+.why-us__article:first-of-type .why-us__img {
   background: var(--secondary-theme-color);
 }
 
-article:nth-of-type(2) .why-us__img{
+.why-us__article:nth-of-type(2) .why-us__img{
   background: var(--main-theme-color);
 }
 
-article:nth-of-type(3) .why-us__img{
+.why-us__article:nth-of-type(3) .why-us__img{
   background: var(--tertiary-theme-color);
+}
+
+/* BENEFITS SECTION */
+
+.benefits {
+  padding: 100px 0;
+  background: var(--secondary-bg-color);
+}
+
+.benefits .container {
+  justify-content: space-between;
+}
+
+.benefits .wrapper {
+  justify-content: space-between;
+  background: var(--base-color);
+  padding: 30px;
+  margin-bottom: 50px;
+  height: 400px;
+  max-width: 90%;
+}
+
+.benefits--border {
+  border: 1px solid #E8E9ED;
+  border-radius: 5px;
+}
+
+.benefits__img {
+  position: relative;
+  z-index: 0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 100%;
+}
+
+.benefits__text {
+  margin: 50px auto;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.wrapper:first-of-type .benefits__img::before {
+  position: absolute;
+  top: 20%;
+  right: 20%;
+  z-index: -1;
+  content: '';
+  width: 180px;
+  height: 180px;
+  background: var(--secondary-theme-color);
+  border-radius: 41px;
+  transform: rotateZ(45deg);
+}
+
+.wrapper:nth-of-type(2) .benefits__img::before {
+  position: absolute;
+  top: 0;
+  left: 20%;
+  z-index: -1;
+  content: '';
+  height: 320px;
+  width: 320px;
+  background: var(--vibrant-main-theme-color);
+  border-radius: 50%;
+}
+
+.benefits__img img {
+  max-width: 60%;
+}
+
+.benefits__article {
+  position: relative;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  padding: 15px;
+  height: 100%;
+  max-width: 40%;
+}
+
+.benefits__article::after {
+  content: '';
+  width: 66%;
+  height: 3px;
+  background: var(--secondary-theme-color);
+}
+
+.wrapper:nth-of-type(2) .benefits__article::after {
+  background: var(--vibrant-main-theme-color);
+}
+
+.benefits--trumpet-wrapper {
+  display: flex;
+  justify-content: space-between;
+  max-width: 90%;
+}
+
+.benefits--trumpet-wrapper .benefits__article::after {
+  background: var(--tertiary-theme-color);
+}
+
+.benefits--trumpet-wrapper .wrapper {
+  margin-bottom: 0;
+  max-width: 55%;
+}
+
+.benefits--trumpet-wrapper .benefits__article {
+  max-width: 100%;
+}
+
+.benefits__trumpet-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 40%;
+  height: 400px;
+  background: var(--tertiary-theme-color);
+}
+
+.benefits__trumpet-img img {
+  width: 90%;
 }
