--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ button {
   display: flex;
   justify-content: center;
   width: 100%;
-  background: var(--base-color);
+  background: rgba(255, 255, 255, 0.9);
   box-shadow: 0 3px 6px var(--menu-shadow-color);
 }
 
