--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -141,6 +141,7 @@ button {
 /* LANDING PAGE SECTION */
 
 .landing-page {
+  padding: 0 20px;
   height: 100vh;
   background: var(--base-color);
 }
@@ -228,7 +229,7 @@ button {
 /* BENEFITS SECTION */
 
 .benefits {
-  padding: 100px 0;
+  padding: 100px 20px;
   background: var(--secondary-bg-color);
 }
 
@@ -357,7 +358,7 @@ button {
 /* OFFERS SECTION*/
 
 .prices {
-  padding: 50px 0;
+  padding: 50px 20px;
   background: var(--base-color);
 }
 
@@ -561,6 +562,7 @@ button {
 .contact__form {
   display: flex;
   flex-direction: column;
+  padding: 20px;
   max-width: 45%;
   min-width: 300px;
 }
@@ -658,5 +660,6 @@ button {
   align-self: center;
   display: flex;
   justify-content: space-between;
+  margin: 30px;
   min-width: 70px;
 }
