header text color solved

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -44,7 +44,7 @@
     border-bottom: 3px solid $color-base;
 
     &:hover {
-      color: $color-text-main);
+      color: $color-text-main;
       border-bottom: 3px solid $color-theme-main;
     }
   }
